<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns = "*"
    android:weightSum="5">
    <TableRow
        android:layout_weight = "1"
        >
        <TextView
            android:id="@+id/readout"
            android:layout_height ="match_parent"
            android:layout_width = "match_parent"
            android:gravity="center"
            android:background="@color/background_floating_material_dark"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:textColor="@color/primary_material_light"
            android:textSize = "50sp"
            android:layout_span ="3"

            />
    </TableRow>
    <TableRow
        android:layout_weight = "1">
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k1"
            android:textSize="40sp"
            android:id="@+id/ke1"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k2"
            android:textSize="40sp"
            android:id="@+id/ke2"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k3"
            android:textSize="40sp"
            android:id="@+id/ke3"
            />
    </TableRow>
    <TableRow
        android:layout_weight = "1">
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k4"
            android:textSize="40sp"
            android:id="@+id/ke4"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k5"
            android:textSize="40sp"
            android:id="@+id/ke5"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k6"
            android:textSize="40sp"
            android:id="@+id/ke6"
            />
    </TableRow>
    <TableRow
        android:layout_weight = "1">
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k7"
            android:textSize="40sp"
            android:id="@+id/ke7"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k8"
            android:textSize="40sp"
            android:id="@+id/ke8"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k9"
            android:textSize="40sp"
            android:id="@+id/ke9"
            />
    </TableRow>
    <TableRow
        android:layout_weight = "1">
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/kb"
            android:textSize="20sp"
            android:id="@+id/keb"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/k0"
            android:textSize="40sp"
            android:id="@+id/ke0"
            />
        <Button
            android:layout_height="fill_parent"
            android:layout_width ="fill_parent"
            android:onClick="updateDisplay"
            android:text="@string/ke"
            android:textSize="20sp"
            android:id="@+id/kee"
            />
    </TableRow>

</TableLayout>